--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "postgres": "^3.4.7",
